force-app/main/default/objects/Cost__c/fields/Paperwork__c.field-meta.xml
<CustomField>
    <fullName>Paperwork__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Paperwork</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Paperwork__c.Type__c</field>
            <operation>equals</operation>
            <value>Cost confirmation</value>
        </filterItems>
        <filterItems>
            <field>Paperwork__c.Opportunity__r.StageName</field>
            <operation>notContain</operation>
            <value>Proposal/Price Quote, Negotiation/Review, Closed Won, Closed Lost</value>
        </filterItems>
        <filterItems>
            <field>$Source.Opportunity__c</field>
            <operation>equals</operation>
            <valueField>Paperwork__c.Opportunity__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Paperwork__c</referenceTo>
    <relationshipLabel>Costs</relationshipLabel>
    <relationshipName>Costs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>