force-app/main/default/objects/Cost__c/listViews/CostsApprovers_Cost.listView-meta.xml
<ListView>
    <fullName>CostsApprovers_Cost</fullName>
    <filterScope>Queue</filterScope>
    <label>Costs approvers</label>
    <queue>CostsApprovers</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>